--- a/intro-to-tflearn/TFLearn_Sentiment_Analysis.ipynb
+++ b/intro-to-tflearn/TFLearn_Sentiment_Analysis.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -46,10 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "reviews = pd.read_csv('reviews.txt', header=None)\n",
@@ -69,15 +67,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total words in data set:  74074\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import Counter\n",
     "\n",
-    "total_counts = # bag of words here\n",
+    "total_counts = Counter()\n",
+    "\n",
+    "for _, row in reviews.iterrows():\n",
+    "    total_counts.update(row[0].split(' '))\n",
+    "# bag of words here\n",
     "\n",
     "print(\"Total words in data set: \", len(total_counts))"
    ]
@@ -91,11 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', 'the', '.', 'and', 'a', 'of', 'to', 'is', 'br', 'it', 'in', 'i', 'this', 'that', 's', 'was', 'as', 'for', 'with', 'movie', 'but', 'film', 'you', 'on', 't', 'not', 'he', 'are', 'his', 'have', 'be', 'one', 'all', 'at', 'they', 'by', 'an', 'who', 'so', 'from', 'like', 'there', 'her', 'or', 'just', 'about', 'out', 'if', 'has', 'what', 'some', 'good', 'can', 'more', 'she', 'when', 'very', 'up', 'time', 'no']\n"
+     ]
+    }
+   ],
    "source": [
     "vocab = sorted(total_counts, key=total_counts.get, reverse=True)[:10000]\n",
     "print(vocab[:60])"
@@ -110,11 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fulfilled :  30\n"
+     ]
+    }
+   ],
    "source": [
     "print(vocab[-1], ': ', total_counts[vocab[-1]])"
    ]
@@ -134,13 +154,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "word2idx = ## create the word-to-index dictionary here"
+    "word2idx = {word: i for i, word in enumerate(vocab)}## create the word-to-index dictionary here"
    ]
   },
   {
@@ -160,15 +178,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def text_to_vector(text):\n",
-    "    \n",
-    "    pass"
+    "    word_vector = np.zeros(len(vocab), dtype=np.int_)\n",
+    "    for word in text.split(' '):\n",
+    "        idx = word2idx.get(word, None)\n",
+    "        if idx is None:\n",
+    "            continue\n",
+    "        else:\n",
+    "            word_vector[idx] += 1\n",
+    "    return np.array(word_vector)"
    ]
   },
   {
@@ -189,11 +213,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, 0, 2, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 1, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text_to_vector('The tea is for a party to celebrate '\n",
     "               'the movie so she has no time for a cake')[:65]"
@@ -208,10 +243,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "word_vectors = np.zeros((len(reviews), len(vocab)), dtype=np.int_)\n",
@@ -221,11 +254,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 18,   9,  27,   1,   4,   4,   6,   4,   0,   2,   2,   5,   0,\n",
+       "          4,   1,   0,   2,   0,   0,   0,   0,   0,   0],\n",
+       "       [  5,   4,   8,   1,   7,   3,   1,   2,   0,   4,   0,   0,   0,\n",
+       "          1,   2,   0,   0,   1,   3,   0,   0,   0,   1],\n",
+       "       [ 78,  24,  12,   4,  17,   5,  20,   2,   8,   8,   2,   1,   1,\n",
+       "          2,   8,   0,   5,   5,   4,   0,   2,   1,   4],\n",
+       "       [167,  53,  23,   0,  22,  23,  13,  14,   8,  10,   8,  12,   9,\n",
+       "          4,  11,   2,  11,   5,  11,   0,   5,   3,   0],\n",
+       "       [ 19,  10,  11,   4,   6,   2,   2,   5,   0,   1,   2,   3,   1,\n",
+       "          0,   0,   0,   3,   1,   0,   1,   0,   0,   0]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Printing out the first 5 word vectors\n",
     "word_vectors[:5, :23]"
@@ -242,10 +293,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Y = (labels=='positive').astype(np.int_)\n",
@@ -262,11 +311,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  0.],\n",
+       "       [ 0.,  1.],\n",
+       "       [ 1.,  0.],\n",
+       "       ..., \n",
+       "       [ 1.,  0.],\n",
+       "       [ 1.,  0.],\n",
+       "       [ 1.,  0.]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trainY"
    ]
@@ -338,16 +402,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Network building\n",
     "def build_model():\n",
     "    # This resets all parameters and variables, leave this here\n",
     "    tf.reset_default_graph()\n",
+    "    \n",
+    "        # Inputs\n",
+    "    net = tflearn.input_data([None, 10000])\n",
+    "\n",
+    "    # Hidden layer(s)\n",
+    "    net = tflearn.fully_connected(net, 200, activation='ReLU')\n",
+    "    net = tflearn.fully_connected(net, 25, activation='ReLU')\n",
+    "\n",
+    "    # Output layer\n",
+    "    net = tflearn.fully_connected(net, 2, activation='softmax')\n",
+    "    net = tflearn.regression(net, optimizer='sgd', \n",
+    "                             learning_rate=0.1, \n",
+    "                             loss='categorical_crossentropy')\n",
+    "    \n",
+    "    model = tflearn.DNN(net)\n",
+    "    return model\n",
     "    \n",
     "    #### Your code ####\n",
     "    \n",
@@ -368,10 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = build_model()"
@@ -390,12 +466,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Step: 1589  | total loss: \u001b[1m\u001b[32m0.56643\u001b[0m\u001b[0m | time: 4.898s\n",
+      "| SGD | epoch: 010 | loss: 0.56643 - acc: 0.7107 -- iter: 20224/20250\n",
+      "Training Step: 1590  | total loss: \u001b[1m\u001b[32m0.58130\u001b[0m\u001b[0m | time: 5.938s\n",
+      "| SGD | epoch: 010 | loss: 0.58130 - acc: 0.7021 | val_loss: 0.66420 - val_acc: 0.5302 -- iter: 20250/20250\n",
+      "--\n"
+     ]
+    }
+   ],
    "source": [
     "# Training\n",
     "model.fit(trainX, trainY, validation_set=0.1, show_metric=True, batch_size=128, n_epoch=10)"
@@ -412,11 +499,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy:  0.566\n"
+     ]
+    }
+   ],
    "source": [
     "predictions = (np.array(model.predict(testX))[:,0] >= 0.5).astype(np.int_)\n",
     "test_accuracy = np.mean(predictions == testY[:,0], axis=0)\n",
@@ -432,10 +525,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Helper function that uses your model to predict sentiment\n",
@@ -448,11 +539,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence: Moonlight is by far the best movie of 2016.\n",
+      "P(positive) = 0.584 : Positive\n",
+      "Sentence: It's amazing anyone could be talented enough to make something this spectacularly awful\n",
+      "P(positive) = 0.329 : Negative\n"
+     ]
+    }
+   ],
    "source": [
     "sentence = \"Moonlight is by far the best movie of 2016.\"\n",
     "test_sentence(sentence)\n",
@@ -460,14 +560,23 @@
     "sentence = \"It's amazing anyone could be talented enough to make something this spectacularly awful\"\n",
     "test_sentence(sentence)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "tflearn3",
    "language": "python",
-   "name": "python3"
+   "name": "tflearn3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -479,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
